crates/reposix-core/tests/compile-fail/tainted_into_untainted.stderr
error[E0308]: mismatched types
  --> tests/compile-fail/tainted_into_untainted.rs:24:21
   |
24 |     takes_untainted(tainted);
   |     --------------- ^^^^^^^ expected `Untainted<Issue>`, found `Tainted<Issue>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `Untainted<Issue>`
              found struct `Tainted<Issue>`
note: function defined here
  --> tests/compile-fail/tainted_into_untainted.rs:9:4
   |
 9 | fn takes_untainted(_: Untainted<Issue>) {}
   |    ^^^^^^^^^^^^^^^ -------------------
